# tsubaki_scraper

./: .gitignore  ARCHITECTURE.md  BOT_DETECTION_BYPASS.md  BROWSER_AUTOMATION_PLAN.md  BROWSER_SETUP.md  BUG_FIXES_SUMMARY.md  CLOUDFLARE_BYPASS_REPORT.md  Cargo.toml  FIXES_APPLIED.md  ITERATION2_FIXES.md  LOW_CHAPTER_INVESTIGATION.md  PULL_REQUEST.md  RESULTS_AND_NEXT_STEPS.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY_2025-11-05.md  SOURCE_FIX_STRATEGY.md  SOURCE_STATUS.md  TESTING_GUIDE.md  URL_FIXES.md  WARP.md  analyze_flamecomics.py  api_response__series.json  asura_series_page.html  asuracomics_chapters.txt  asuracomics_sample.html  asuracomics_series.html  cloudflare_config.toml  config.toml.example  daycomics_series_list.html  debug_asmotoon_sample.html  debug_firescans_sample.html  debug_hivetoons_sample.html  debug_kagane_sample.html  debug_manhuaus_sample.html  debug_qiscans_sample.html  debug_resetscans_sample.html  debug_rizzcomic_sample.html  debug_rokaricomics_sample.html  debug_witchscans_sample.html  diagnose_sources.py  (+22 more)
.claude/: settings.local.json
examples/: test_asurascans.rs  test_browser_basic.rs  test_cloudflare_sources.rs  test_firescans.rs  test_flamecomics.rs  test_free_scanlation.rs  test_hivetoons.rs  test_hivetoons_browser.rs  test_kagane.rs  test_kenscans.rs  test_kenscans_browser.rs  test_mangadex.rs  test_mavintranslations_debug.rs  test_nextjs_sources.rs  test_nyxscans_browser.rs  test_qiscans_debug.rs  test_qiscans_domain.rs  test_sources.rs  test_stonescape.rs  test_temple_scan.rs  test_webtoon.rs
migrations/: 01_init_schema.sql
(+119 files in other folders)
