[package]
name = "rust_manga_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli"] }
headless_chrome = "1.0"
chromiumoxide_fetcher = "0.7.0"
dirs = "5"
rand = "0.8"
zip = "0.6.2"
scraper = "0.13.0"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.17"
env_logger = "0.9.0"
log4rs = "1.2.0"
toml = "0.8"
chrono = { version = "0.4", features = ["clock","serde"] }
once_cell = "1"
regex = "1"
tokio = { version = "1", features = ["time"] }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4", features = ["macros"] }
actix-http-test = "3.0.0"
